-fix bug with remove item from cart

--- a/index.css
+++ b/index.css
@@ -75,7 +75,9 @@ h1 {
   font-weight: bold;
 }
 
-.form-container>span,p {
+.form-container>span,
+p,
+.item-output>span {
   font-size: 1.3em;
 }
 
